Updated openapi yaml
